--- a/latex/main.tex
+++ b/latex/main.tex
@@ -14,11 +14,11 @@
 \section{Abstract}
 
 
-XELIS is a private, scalable and fast Layer 1 blockchain based on BlockDAG technology, designed to ensure maximum user security and privacy for transactions and decentralized applications. While traditional public digital ledgers offer transparency, they often compromise user privacy by exposing wallet balances and transaction details. XELIS addresses this problem by offering a secure platform that combines advanced cryptographic techniques with an innovative data structure to preserve user privacy without sacrificing performance or scalability.\\
+XELIS is a private, scalable and fast Layer-1 blockchain based on BlockDAG technology, designed to ensure maximum user security and privacy for transactions and decentralized applications. While traditional public digital ledgers offer transparency, they often compromise user privacy by exposing wallet balances and transaction details. XELIS addresses this problem by offering a secure platform that combines advanced cryptographic techniques with an innovative data structure to preserve user privacy without sacrificing performance or scalability.\\
 
 XELIS introduces a native utility coin that serves multiple purposes: it is used for transaction fees and network functions, acts as a medium of exchange, and serves as a store of value. This approach allows users to conduct fast, secure, and private transactions, deploy digital applications, and create decentralized financial services, all while maintaining the confidentiality of user balances and transaction amounts. XELIS ensures that while balances and transaction amounts are private, the relationship between sender addresses and receiver addresses is maintained within the public blockchain. This strategy ensures that compliance regulators and governmental officials are still able to track and locate wallets affiliated with potential fraudulent activities.\\
 
-To achieve these goals, XELIS employs a BlockDAG architecture that merges concurrent chains instead of choosing between them, enhancing speed, scalability and security. It's complemented by homomorphic encryption using the Twisted ElGamal cryptosystem, using the Ristretto group over the popular elliptic curve 25519, enabling privacy for transaction amounts and balances while maintaining a high level of security. This encryption method relies on simple operations, such as addition and subtraction on ciphertexts only. As a result, the financial records of the blockchain's are manipulated solely in their encrypted state.\\
+To achieve these goals, XELIS employs a BlockDAG architecture that merges concurrent chains instead of choosing between them, enhancing speed, scalability, and security. It's complemented by homomorphic encryption using the Twisted ElGamal cryptosystem, using the Ristretto group over the popular elliptic curve 25519, enabling privacy for transaction amounts and balances while maintaining a high level of security. This encryption method relies on simple operations, such as addition and subtraction on ciphertexts only. As a result, the financial records of the blockchain's are manipulated solely in their encrypted state.\\
 
 XELIS adopts an account-based model instead of the traditional UTXO model used by Bitcoin, resulting in a faster, more flexible, and smaller ledger that enhances privacy by eliminating the need to link inputs and outputs, thereby ensuring true fungibility. The platform supports a fast-sync feature that downloads only the latest state of the blockchain rather than its full history, further optimizing performance. Additionally, a pruning system can be employed to reduce blockchain size by removing old blocks and transactions.\\
 
@@ -32,7 +32,7 @@ Cryptocurrencies have fundamentally changed the financial landscape by enabling 
 
 The trilemma was popularized by Vitalik Buterin, highlighting the difficulty of optimizing all three properties simultaneously. Decentralization ensures that no single entity can control the system, enhancing resistance to censorship. However, increased decentralization may slow down consensus processes, which can affect overall performance. Security safeguards against fraud and attacks but often requires substantial computational resources, which can hinder performance if prioritized for speed. Scalability refers to a blockchain's ability to handle rising transaction volumes without sacrificing efficiency.\\
 
-To complicate things further, XELIS introduces the concept of a quadrilemma or "quadlemma," as it will be referred to, adding privacy as a critical fourth pillar. As cryptocurrencies grow in adoption, concerns about transaction transparency and user confidentiality have become paramount. Privacy features allow users to engage in transactions without revealing sensitive information, yet achieving this can also affect scalability and decentralization. The quadlemma framework underscores the intricate balance required to develop effective blockchain solutions, highlighting the ongoing evolution in the field as developers seek to optimize all four pillars simultaneously without tradeoffs to the other pillars. \\
+To complicate things further, XELIS introduces the concept of a quadrilemma or "quadlemma", as it will be referred to, adding privacy as a critical fourth pillar. As cryptocurrencies grow in adoption, concerns about transaction transparency and user confidentiality have become paramount. Privacy features allow users to engage in transactions without revealing sensitive information, yet achieving this can also affect scalability and decentralization. The quadlemma framework underscores the intricate balance required to develop effective blockchain solutions, highlighting the ongoing evolution in the field as developers seek to optimize all four pillars simultaneously without tradeoffs to the other pillars. \\
 
 
 
@@ -54,14 +54,14 @@ Ethereum, proposed by Vitalik Buterin in 2013 and launched in 2015, built upon B
 
 Monero, launched in 2014, focuses on privacy and anonymity, offering enhanced features to protect users' transaction details and identities. It utilizes ring signatures to obscure the sender's identity by mixing their digital signature with others, employs stealth addresses for unique one-time transaction addresses, and incorporates Ring Confidential Transactions (RingCT) to keep transaction amounts private. However, Monero has scalability concerns due to larger transaction sizes, limited smart contract support, and regulatory scrutiny resulting from its full privacy focus.\\
 
-Kaspa is a newer entrant, launched in 2021, designed to improve scalability and security using a BlockDAG (Directed Acyclic Graph) architecture. This allows multiple blocks to be mined and added concurrently, increasing throughput and reducing transaction confirmation times. Kaspa maintains high security and decentralization through its unique consensus algorithm, which is capable of handling higher transaction volumes. Despite these advantages, Kaspa lacks encryption and privacy features, making transaction details traceable, and it currently does not support smart contracts on Layer 1 for advanced decentralized applications and other financial services.\\
+Kaspa is a newer entrant, launched in 2021, designed to improve scalability and security using a BlockDAG (Directed Acyclic Graph) architecture. This allows multiple blocks to be mined and added concurrently, increasing throughput and reducing transaction confirmation times. Kaspa maintains high security and decentralization through its unique consensus algorithm, which is capable of handling higher transaction volumes. Despite these advantages, Kaspa lacks encryption and privacy features, making transaction details traceable, and it currently does not support smart contracts on Layer-1 for advanced decentralized applications and other financial services.\\
 
 
 \subsection{Identifying the Gaps}
 
-While Bitcoin, Ethereum, Monero, and Kaspa have each contributed significant advancement of blockchain technology, they also exhibit shortcomings. Bitcoin and Ethereum face scalability and privacy issues, with slow transaction times and high fees. Monero, while excellent for privacy, lacks scalability and smart contract functionality, limiting its broader adoption. Kaspa provides speed and scalability through its BlockDAG architecture but lacks the privacy features and Layer 1 programmability needed for a wider range of applications.\\
+While Bitcoin, Ethereum, Monero, and Kaspa have each contributed significant advancement of blockchain technology, they also exhibit shortcomings. Bitcoin and Ethereum face scalability and privacy issues, with slow transaction times and high fees. Monero, while excellent for privacy, lacks scalability and smart contract functionality, limiting its broader adoption. Kaspa provides speed and scalability through its BlockDAG architecture but lacks the privacy features and Layer-1 programmability needed for a wider range of applications.\\
 
-XELIS seeks to address these shortcomings and “Solve the quadlemma” by offering a next-generation Layer 1 blockchain that combines the best of each platform: security, high scalability and speed, robust privacy features, and a flexible environment for decentralized applications.\\
+XELIS seeks to address these shortcomings and “Solve the quadlemma” by offering a next-generation Layer-1 blockchain that combines the best of each platform: security, high scalability and speed, robust privacy features, and a flexible environment for decentralized applications.\\
 
 XELIS aims to create a secure, private, and easy to use environment that empowers users to engage in digital transactions and applications without compromise.\\
 
@@ -76,7 +76,7 @@ XELIS offers a safer alternative by addressing these privacy shortcomings throug
 
 XELIS aims to provide enhanced confidentiality compared to Bitcoin, Ethereum and Kaspa by implementing encrypted balances and encrypted transaction amounts through the use of Homomorphic Encryption and Zero-Knowledge Proofs. This keeps the ledger decentralized while ensuring only the user has access to information about their holdings.\\
 
-To achieve scalability and security, XELIS leverages a unique BlockDAG architecture and consensus mechanism. With a low block time target, the platform may encounter orphaned blocks, but the use of BlockDAG minimizes their occurrence while allowing for a higher block count, faster transaction confirmation, improved security, and increased transactions per second. To support the development of a comprehensive DeFi ecosystem, XELIS plans to introduce Smart Contract functionality through its proprietary Virtual Machine directly on the Layer 1 protocol. The platform will also allow the creation of Confidential Assets or fully decentralized tokens with the same level of privacy and decentralization as XELIS itself.\\
+To achieve scalability and security, XELIS leverages a unique BlockDAG architecture and consensus mechanism. With a low block time target, the platform may encounter orphaned blocks, but the use of BlockDAG minimizes their occurrence while allowing for a higher block count, faster transaction confirmation, improved security, and increased transactions per second. To support the development of a comprehensive DeFi ecosystem, XELIS plans to introduce Smart Contract functionality through its proprietary Virtual Machine directly on the Layer-1 protocol. The platform will also allow the creation of Confidential Assets or fully decentralized tokens with the same level of privacy and decentralization as XELIS itself.\\
 
 A decentralized network is essential for the security and resilience of the protocol eliminating single points of failure. XELIS achieves this by a wide distribution of nodes globally and utilizing an incentive based PoW algorithm that is friendly to both CPU and GPU miners, while remaining resistant to ASIC and FPGA hardware advantages.\\
 
@@ -101,7 +101,7 @@ A BlockDAG (Directed Acyclic Graph) is an advanced data structure used in blockc
 
 BlockDAG needs to generate a deterministic order to execute all the blocks and transactions in the same way across all nodes to keep the compatibility and exact state in the network. \\
 
-XELIS uses a topological order, where blocks are assigned a "topological height" (or "topo-height") based on their position within the DAG. This topological order is crucial for establishing a consistent and deterministic sequence for the blocks, making the relationships within the DAG clear. Blocks with a greater topo-height are considered later in the order. This dynamic approach means that the topological height can be adjusted during reorganizations until it reaches a point known as the "stable height." When multiple branches exist within the DAG, the order is determined by the cumulative difficulty (the total difficulty sum of all block tips), ensuring that the block with the highest cumulative difficulty is prioritized.\\
+XELIS uses a topological order, where blocks are assigned a "topological height" (or "topo-height") based on their position within the DAG. This topological order is crucial for establishing a consistent and deterministic sequence for the blocks, making the relationships within the DAG clear. Blocks with a greater topo-height are considered later in the order. This dynamic approach means that the topological height can be adjusted during reorganizations until it reaches a point known as the "stable height". When multiple branches exist within the DAG, the order is determined by the cumulative difficulty (the total difficulty sum of all block tips), ensuring that the block with the highest cumulative difficulty is prioritized.\\
 
 Topological order ensures that for every directed edge (u, v) in the DAG, node u precedes node v in the sequence, effectively representing dependencies and maintaining the correct execution order without creating cycles. This systematic arrangement allows for reorganization within the DAG while preventing deep reorganization attacks by dishonest actors, as blocks below the stable height are fixed and cannot be altered.\\
 
@@ -169,7 +169,7 @@ In contrast, FHE schemes typically introduce additional "noise" that enlarges ci
 \begin{figure}
     \centering
     \includegraphics[width=0.9\linewidth]{ElGamal Homomorphic XEL (1).png}
-    \caption{Twisted Elgamal, Xelis Team 2024}
+    \caption{Twisted ElGamal, Xelis Team 2024}
     \label{fig:enter-label}
 \end{figure}
 
@@ -214,6 +214,18 @@ Front Running concerns arise from the need to base range proofs on the current e
 \textbf{Outgoing Transactions:} The order of outgoing transactions must be preserved to maintain balance validity during proof verification. XELIS uses an incrementing nonce to prevent replay attacks and ensure that transactions follow the same sequence as when the ZKP was created.
 Handling Multiple Transactions: When multiple transactions are involved, XELIS distinguishes between Output Balances (current balance minus outputs spent) and Final Balances (real user balance with all incoming and outgoing funds). ZKPs are created using the final balance, but for cases involving multiple outputs split by incoming transactions, the output balance is used for verification. The system maintains the output balance as an internal process, ensuring future transactions remain valid based on the chain state.\\
 
+\subsection{Balance and Ownership Proofs}
+
+Balance and ownership proofs play a crucial role in XELIS by providing a secure way to verify the balance of an encrypted wallet. These proofs allow users to demonstrate the real value of their encrypted balances without revealing sensitive information. Users can select from exact balance proofs, which will confirm an exact balance, or an ownership, which will confirm that addresses contains at least N coins (with N being configurable by the user).  Each proof is tied to a specific balance version, ensuring that it accurately reflects the state of the wallet at the time of generation. Once a transaction updates the balance, the proof becomes outdated, maintaining the integrity and security of the wallet.\\
+
+Implementing balance proofs enhances trust, transparency, and complianec within the XELIS ecosystem, as users can share verifiable proof of their balances without compromising privacy.
+
+\subsubsection{How Balance Proofs Work}
+
+To prove the whole balance of an asset, a new ciphertext with the whole amount of coins available, with a constant Pedersen Opening, is created. The new balance ciphertext is substracted to the real balance ciphertext to give a new balance ciphertext expected to represent the zero value. A commitment equality proof is generated to prove that the new balance ciphertext is equal to zero. To verify the validity of the proof, a new Pedersen Commitment is constructed with a value of zero, utilizing the constant Pedersen Opening. Alongside this, a new ciphertext is created using the expected balance amount and the same constant Pedersen Opening. The next step involves recalculating the ciphertext that represents a zero value and checking the equality of the commitment proof against both the original commitment and the zeroed ciphertext.\\
+
+This structure allows for effective management of balance proofs while ensuring that users can share their encrypted balance information securely.
+
 \subsection{XELIS Elliptic Curve Discrete Logarithm Problem}
 
 The Elliptic Curve Discrete Logarithm Problem (ECDLP) is a cornerstone of elliptic curve cryptography (ECC), a widely used cryptographic system renowned for its security and efficiency. The ECDLP forms the basis of ECC's security, relying on the computational difficulty of solving a specific mathematical problem.\\
@@ -232,12 +244,11 @@ The overview of BSGS goes as follows:\\
 
 Our target point, which we want to decode, represents an integer in the range \([0, 2^{(L1 + L2)}]\).\\
 
-We have a T1 hash table, where the key is the curve point and value is the decoded point. \(T1 = <i * G => i | i\) in \([1, 2^{L1}]>\)\\
+We have a T1 hash table, where the key is the curve point and value is the decoded point. \(T1 = (i * G)\), whereas "i" of the T1 table is in the range of \([1, 2^{L1}]\) and G is the Ristretto base point \\
 
-We have a T2 linear table (an array), where T2 = \([j * 2^{L1} * G |\) j in \([1, 2^{L2}]]\)
-For each j in \(0..2^{L2}\)\\
+We have a T2 linear table (an array), where T2 = \((j * 2^{L1} * G)\), whereas "j" in range of \([1, 2^{L2}]\)\\
 
-Compute the difference between \(T2[j]\) and the target point.\\
+For each j in \(0....2^{L2}\). Compute the difference between \(T2[j]\) and the target point.\\
 
 If we have an occurrence in T1 table, the decoded integer is \(j * 2^{L1} + i\).\\
 
@@ -247,7 +258,7 @@ In XELIS, the regular BSGS algorithm is further improved with several optimizati
 
 \textbf{Batching Techniques:} Instead of using a tree-based Montgomery trick, we employ batched inversion, which is implemented in FieldElement. This method improves computational speed.\\
 
-\textbf{Table Optimization:}Reduced Storage, Table T1 only contains the truncated x coordinates.\\
+\textbf{Table Optimization:} Reduced Storage, Table T1 only contains the truncated x coordinates.\\
 
 \textbf{Efficient Hashing:} Cuckoo hashing is used, with hash values directly derived from a subset of the bytes of the point.\\
 
@@ -255,7 +266,7 @@ In XELIS, the regular BSGS algorithm is further improved with several optimizati
 
 \textbf{Input Shifting:} By leveraging the property −(x,y)=(x,−y) on the Montgomery curve, we reduce the need for storage and inversions by half.\\
 
-\textbf{Fixed Constant:}The L2 constant is fixed to only ~16 kB tp simplify processing and ensure manageable table sizes. It would require slightly more modular inversions but has no visible impact on performance and can save more than 100 MB on disk in some cases.\\
+\textbf{Fixed Constant:} The L2 constant is fixed to only ~16 kB tp simplify processing and ensure manageable table sizes. It would require slightly more modular inversions but has no visible impact on performance and can save more than 100 MB on disk in some cases.\\
 
 It is important to note that we are dealing with a curve which has cofactors. To handle curves with cofactors, we need to multiply by the cofactor before running the ECDLP to ensure a canonical encoding of curve points.\\
 
@@ -284,7 +295,7 @@ The UTXO Model is the foundational structure used by Bitcoin and several other c
 \caption{UTXO Model, Xelis Team 2024}
 \end{figure}
   
-    \item \textbf{State Reconstruction:} The current state of a user's balance is derived by scanning through all transactions and summing the UTXOs associated with their addresses. This process can be resource-intensive, especially as the blockchain grows.\\
+\item \textbf{State Reconstruction:} The current state of a user's balance is derived by scanning through all transactions and summing the UTXOs associated with their addresses. This process can be resource-intensive, especially as the blockchain grows.\\
 \end{itemize}
 
 \textbf{Advantages of UTXO,}\\
@@ -293,6 +304,7 @@ The UTXO Model is the foundational structure used by Bitcoin and several other c
 
 \item \textbf{Transparency:} Each transaction’s UTXOs can be individually verified, contributing to the system's overall security and transparency.\\
 \end{itemize}
+
 \textbf{Disadvantages of UTXO,}\\ 
 \begin{itemize}
 \item \textbf{Complexity:} Managing and reconstructing the state of an account from UTXOs can be computationally demanding and complex.\\ 
@@ -305,11 +317,11 @@ The UTXO Model is the foundational structure used by Bitcoin and several other c
 The Account Model, employed by Ethereum and some other blockchains, represents a different approach to managing transactions and balances. The model works as followed,\\
 
 \begin{itemize}
-    \item \textbf{Accounts:} In this model, each account has a balance and state associated with it. Transactions update the balance of these accounts directly.\\
+\item \textbf{Accounts:} In this model, each account has a balance and state associated with it. Transactions update the balance of these accounts directly.\\
     
-    \item \textbf{State Changes:} When a transaction is processed, it modifies the state of the involved accounts by deducting from one account and adding to another.\\
+\item \textbf{State Changes:} When a transaction is processed, it modifies the state of the involved accounts by deducting from one account and adding to another.\\
     
-    \item \textbf{Simplified State Management:} Instead of tracking individual UTXOs, the system maintains the current state of each account, making it easier to determine balances and process transactions.\\
+\item \textbf{Simplified State Management:} Instead of tracking individual UTXOs, the system maintains the current state of each account, making it easier to determine balances and process transactions.\\
 \end{itemize}
 
 \textbf{Advantages of Account Model,} \\
@@ -322,7 +334,8 @@ The Account Model, employed by Ethereum and some other blockchains, represents a
 
 \item \textbf{Balance:} no need to scan the whole chain to find the most up-to-date balance, you can get the latest state of an account in one request and is independent of the chain size.\\
 \end{itemize}
-\textbf{Disadvantages,} \\
+
+\textbf{Disadvantages of Account Model,} \\
 \begin{itemize}
 \item \textbf{State Size:} While more efficient for processing, the system needs to maintain the current state of all accounts. 
 
@@ -336,8 +349,9 @@ The Account Model, employed by Ethereum and some other blockchains, represents a
 \subsubsection{Why the Account Model was Chosen for XELIS}
 
 XELIS has adopted the Account Model instead of the UTXO Model for several compelling reasons:
-Performance: The Account Model allows for faster transaction processing. By directly updating account balances, XELIS minimizes the computational overhead involved in tracking and managing discrete UTXOs. This efficiency is particularly advantageous for handling high transaction volumes and ensuring swift processing.\\
 \begin{itemize}
+\item \textbf{Performance:} The Account Model allows for faster transaction processing. By directly updating account balances, XELIS minimizes the computational overhead involved in tracking and managing discrete UTXOs. This efficiency is particularly advantageous for handling high transaction volumes and ensuring swift processing.\\
+
 \item \textbf{State Size and Syncing:} The Account Model facilitates a more streamlined approach to state management. With the ability to maintain and download only the current state of the blockchain, XELIS supports a fast-sync feature. This approach significantly reduces the amount of historical data that needs to be downloaded, enhancing the speed and ease of synchronization for new nodes.\\
 
 \item \textbf{Flexibility and Privacy:} The Account Model offers a more flexible framework for implementing complex transactions and smart contracts. Additionally, it improves privacy by eliminating the need to link transaction inputs and outputs. This separation helps ensure greater fungibility of assets.\\
@@ -352,11 +366,11 @@ In the realm of blockchain technology, ensuring the security and integrity of de
 
 In the XELIS network, Proof of Work serves as the bedrock for achieving consensus and validating transactions. This section delves into the principles behind XELIS’ PoW, its implementation within the XELIS framework, and how it contributes to the robustness and decentralization of our blockchain ecosystem.\\
 
-\subsubsection{Decentralized Vision of XELIS Mining:}
+\subsubsection{Decentralized Vision of XELIS Mining}
 
-At XELIS, we envision a decentralized mining future that maximizes equal participation by prioritizing CPUs and GPUs, which are accessible to all. By limiting the performance of specialized hardware like FPGAs and ASICs, we aim to reduce centralization risks and ensure a more equitable distribution of mining rewards. Our commitment is to foster an inclusive ecosystem where individuals from diverse backgrounds can actively contribute to the network, enhancing both its security and community spirit.\\
+At XELIS, a vision for a decentralized mining future focuses on maximizing equal participation by prioritizing CPUs and GPUs, which are accessible to everyone. By limiting the performance of specialized hardware like FPGAs and ASICs, centralization risks are reduced, promoting a more equitable distribution of mining rewards. The commitment lies in fostering an inclusive ecosystem where individuals from diverse backgrounds can actively contribute to the network, enhancing both security and community spirit.\\
 
-To accomplish our vision, we’ve built our own PoW hashing algorithm that is fully compatible with GPUs and CPUs while reducing the advantages of ASICs and FPGAs. This is made possible by utilizing an algorithm which requires high amounts of memory bandwidth, as memory bandwidth is what most hardware becomes bottlenecked on. A fixed-size scratchpad is generated for each hash based on the hashed input to prevent any input attacks. Scratchpad must be the most distributed possible in order to prevent any patterns that could be leveraged to gain unfair advantages. It is based on the popular ChaCha8.\\
+To achieve this vision, a proprietary PoW hashing algorithm has been developed that is fully compatible with GPUs and CPUs while diminishing the advantages of ASICs and FPGAs. This is accomplished by utilizing an algorithm that requires high memory bandwidth, as this is often the bottleneck for most hardware. A fixed-size scratchpad is generated for each hash based on the hashed input to prevent input attacks. Maximizing the distribution of the scratchpad helps avoid any patterns that could be exploited for unfair advantages. The algorithm is based on the widely recognized ChaCha8.\\
 
 All inner hashing and final output hash are based on Blake3 algorithm to be really fast and provide a good-quality hash. The hash generation should be as fast as possible for fast PoW verification when a block is verified.\\
 
@@ -397,7 +411,7 @@ Encrypted data within a transaction is injected into the extra\_data field, enab
 
 \subsection{Integrated Addresses}
 
-XELIS provides a feature known as integrated addresses, which combine wallet addresses with additional embedded data, similar to Monero's payment IDs but with broader functionality. Integrated addresses allow users to include various types of data directly within the address, facilitating unique uses such as identifying deposits, including shipping information, or sending messages.\\
+XELIS provides a feature known as integrated addresses, which combine wallet addresses with additional embedded data, similar to Monero's payment IDs but with broader functionality. Integrated addresses allow users to include various types of data directly within the address, facilitating unique uses such as identifying deposits, including shipping information, or sending messages.
 \begin{itemize}
 \item \textbf{How It Works:} When sending a transaction to an integrated address, the wallet encrypts the data and includes it in the extra\_data field. This data, supporting JSON encoding/decoding, enhances the utility of addresses for various applications.\\
 
@@ -491,8 +505,26 @@ Chain synchronization involves the local node randomly selecting a peer with a h
 
 \item \textbf{Disconnect:} This packet is sent when a common peer is disconnected from one of local node peers and is used to update the "propagation map predicate" to maintain synchronization.\\
 
-\end{itemize}\\
+\end{itemize}
 This comprehensive design ensures efficient, secure, and resilient communication within the P2P network, supporting a wide range of functionalities and future enhancements.\\
+
+\subsection{Diffie-Hellman Key Exchange Protocol}
+
+The Diffie-Hellman (DH) key exchange protocol is integrated into the XELIS framework to enable secure peer-to-peer (P2P) handshakes. This mechanism allows peers to establish a shared secret key for encryption without directly transmitting their private keys, significantly enhancing the security of communication. The DH protocol uses mathematical computations that enable both parties to independently derive the same shared secret key, utilizing their private keys along with the other party's public key. This method is resistant to eavesdropping since private keys are never transmitted.\\
+
+\subsubsection{How DH Key Exchange Protocol Works}\\
+
+During the initial handshake, each peer generates its own DH public/private key pair, sharing the public key while keeping the private key confidential. The system also supports the configuration of the P2P private key, offering flexibility in key management. Additionally, each peer's public key is stored in a peerlist, facilitating identification and validation during communication.\\
+
+If a peer receives a public key that does not match the stored version, several actions can be taken
+
+\begin{itemize}
+\item \textbf{Reject:} The connection is terminated, and secure communication will not proceed.
+\item \textbf{Warn:} A discrepancy message is logged, and secure communication can then commence using the new agreed-upon key.
+\item \textbf{Ignore:} Secure communication will begin with the new agreed-upon key without any notification.
+\end{itemize}
+
+The implementation of the Diffie-Hellman key exchange protocol within XELIS guarantees secure, encrypted communications between peers over potentially insecure channels. By effectively managing public keys and addressing mismatches, XELIS bolsters its security and resilience against potential threats.
 
 \subsection{XELIS Secure WebSocket for dApps}
 
@@ -612,7 +644,7 @@ Files written for the XVM are saved with the .xel extension. For additional info
 
 \subsection{Confidential Assets}
 
-Confidential Assets are a unique feature allowing anyone to create its own asset / token and be fully compatible with wallets, exchanges and other services supporting XELIS. This is possible because it is directly implemented on the base layer of the blockchain, and not as a second layer solution.\\
+Confidential Assets are a unique feature allowing anyone to create its own asset / token and be fully compatible with wallets, exchanges and other services supporting XELIS. This is possible because it is directly implemented on the base Layer-1 of the blockchain, and not as a second layer (L2) solution.\\
 
 Each asset is represented by a unique asset ID (32 bytes hash). This asset ID is used to identify the asset in transactions and in the blockchain.It allows to have fully private balances and transferred amounts just like XELIS. As an example, XELIS is a confidential asset itself with the asset ID 00000000000000..............000000000000000.\\
 
@@ -622,7 +654,7 @@ Each asset is represented by a unique asset ID (32 bytes hash). This asset ID is
 
 \item \textbf{Compatibility:} Confidential Assets are fully compatible with wallets, exchanges and other services.\\
 
-\item \textbf{Security:} Confidential Assets are implemented on the base layer 1 of the blockchain, and not as a second layer solution.\\
+\item \textbf{Security:} Confidential Assets are implemented on the base Layer-1 of the blockchain, and not as a second layer solution.\\
 
 \item \textbf{Decentralized:} Confidential Assets are fully decentralized and trustless, nobody can freeze or censor your assets.\\
 
@@ -770,14 +802,14 @@ XELIS improves scalability in the following ways:
     \item \textbf{Fast Transaction Finality:} XELIS' block times and blockDAG architecture are optimized to ensure faster confirmation times for transactions, which improves the overall throughput of the network. This makes XELIS more suitable for everyday payments and micro-transactions compared to slower PoW networks, which often struggle with high confirmation times.
 \end{itemize}
 
-By leveraging these techniques, XELIS ensures that the network can scale effectively while still maintaining its core principles of decentralization and security. Unlike blockchains that require layer-2 solutions or centralized shortcuts or indexers to increase scalability, XELIS focuses on optimizing its base layer to handle higher transaction volumes without sacrificing decentralization or security.\\
+By leveraging these techniques, XELIS ensures that the network can scale effectively while still maintaining its core principles of decentralization and security. Unlike blockchains that require Layer-2 solutions or centralized shortcuts or indexers to increase scalability, XELIS focuses on optimizing its base layer to handle higher transaction volumes without sacrificing decentralization or security.\\
 
 
 \subsection{Privacy in XELIS}\\
 
 Privacy is a critical concern for many cryptocurrency users, especially in an era where blockchain analytics are becoming more sophisticated and invasive. In addition, privacy must also be balanced, providing the correct amount of privacy for users to keep their financial histories safe, but complying with modern day governmental regulations and stipulations.\\
 
-XELIS prioritizes privacy by integrating the first ever partial privacy scheme. Utilizing Homomorphic Encryption and Zero Knowledge Proofs, these features ensure that sender and receiver addresses remain public, but the transaction amounts and wallet balances are obfuscated from the public.\\
+XELIS prioritizes privacy by integrating the first ever partial privacy scheme. Utilizing Homomorphic Encryption and Zero Knowledge Proofs, these features ensure that sender and receiver addresses remain public, but transaction amounts and wallet balances are obfuscated from the public and remain private. If wallet balances must be checked by third-party entities, Xelis allows users to share their encrypted balances with others utilizing our sophisticated one-time balance proofs.\\
 
 
 Here's how these privacy features work:
@@ -785,6 +817,8 @@ Here's how these privacy features work:
     \item \textbf{Homomorphic Encryption:} Homomorphic Encryption (HE) enhances privacy by allowing computations on encrypted data without requiring decryption, ensuring that sensitive information remains confidential throughout the process. In the XELIS ecosystem, this cryptographic method, particularly through the ElGamal encryption system, is used to protect transaction details such as account balances and transfer amounts. XELIS employs a variant known as Twisted ElGamal over Ristretto Points, which integrates Pedersen commitments to work seamlessly with Bulletproofs, ensuring efficient transaction verification while retaining strong security. The homomorphic properties of ElGamal, specifically its additive and subtractive capabilities, allow for secure balance adjustments on the blockchain without exposing sensitive data.
 
     \item \textbf{Zero-Knowledge Proofs:} Zero-Knowledge Proofs (ZKPs) are a cryptographic technique that enables one party (the prover) to demonstrate knowledge of certain information to another party (the verifier) without revealing the information itself. In XELIS, ZKPs are crucial for validating encrypted transactions, ensuring that the amount being transferred is correct without revealing sensitive details. Specifically, XELIS employs Bulletproofs, a non-interactive ZKP protocol, to verify that transferred amounts are within valid ranges and non-negative, ensuring transaction integrity. XELIS further optimizes Bulletproofs with batching, aggregation, and source commitments, leading to rapid transaction verification times. These optimizations allow XELIS to process up to 2,500 transactions per second, while also addressing challenges like front-running and maintaining transaction order in a scalable BlockDAG architecture.
+
+    \item \textbf{Balance Proofs:} Balance proofs are essential in XELIS for securely verifying the balance of an encrypted wallet, enabling users to demonstrate the actual value of their balances without disclosing sensitive information. Each proof is linked to a specific balance version, ensuring it accurately reflects the wallet's state at the time of generation, and becomes outdated once a transaction updates the balance. This mechanism upholds the integrity and security of the wallet while enhancing trust and transparency within the XELIS ecosystem, as users can share verifiable proof of their balances without compromising privacy. The implementation plan includes creating a function for generating balance proofs, organizing zero-knowledge proofs into separate Rust files, and developing a \textit{HumanReadableProof} struct to convert proofs into a shareable string format using Bech32 encoding, facilitating secure sharing of encrypted balance information.\\
 \end{itemize}
 
 These privacy features are built directly into the core of XELIS, rather than being optional add-ons, making the network inherently privacy-preserving. Having them embedded directly into the core Layer-1 protocol allows XELIS' soon-to-be launched Smart Contracts, Virtual Machine, and Defi Applications and Assets to retain these privacy features.\\
